Removed libs, Koan Answers are working expect events All the Koan answers are complete expect:   events works with the document object, which won't work in a node only   environment.   Advanced Streams is passing expect one test which does not seem to be   part of the original Rx Java Koans
The actual questions are not updated yet;

--- a/rxkoans.html
+++ b/rxkoans.html
@@ -2,46 +2,15 @@
                     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<script src="lib/jquery-1.5.1.js"></script>
-
-	<link rel="stylesheet" href="lib/qunit.css" type="text/css" media="screen" />
-	<script type="text/javascript" src="lib/qunit.js"></script>
-
-	<script type="text/javascript" src="lib/l2o.js"></script>
-	<script type="text/javascript" src="lib/ixjs.js"></script>
-
-	<script type="text/javascript" src="lib/rx.js"></script>
-	<script type="text/javascript" src="lib/rx.aggregates.js"></script>
-	<script type="text/javascript" src="lib/rx.binding.js"></script>
-	<script type="text/javascript" src="lib/rx.coincidence.js"></script>
-	<script type="text/javascript" src="lib/rx.coincidence.js"></script>
-	<script type="text/javascript" src="lib/rx.experimental.js"></script>
-	<script type="text/javascript" src="lib/rx.joinpatterns.js"></script>
-	<script type="text/javascript" src="lib/rx.time.js"></script>
-        <script type="text/javascript" src="lib/rx.jquery.js"></script>
-
-	<script type="text/javascript" src="lib/koanutils.js"></script>
-
-	<script type="text/javascript" src="koans/lesson1-observablestreams.js"></script>
-	<script type="text/javascript" src="koans/lesson2-ComposableObservations.js"></script>
-	<script type="text/javascript" src="koans/lesson3-Time.js"></script>
-	<!-- <script type="text/javascript" src="koans/lesson4-Events.js"></script>         -->
-	<script type="text/javascript" src="koans/lesson6-AdvancedStreams.js"></script>
-
-	<script type="text/javascript" src="koans/Answers/lesson1-observablestreams.js"></script>
-	<script type="text/javascript" src="koans/Answers/lesson2-ComposableObservations.js"></script>
-	<script type="text/javascript" src="koans/Answers/lesson3-Time.js"></script>
-	<!-- <script type="text/javascript" src="koans/Answers/lesson4-Events.js"></script> -->
-	<script type="text/javascript" src="koans/Answers/lesson6-AdvancedStreams.js"></script>
-
-	<title>Rx Koans</title>
+    <title>Rx Koans</title>
 </head>
 <body>
-	<h1 id="qunit-header">Reactive Extensions for JavaScript: Koans (RxJSKoans)</h1>
-	<h2 id="qunit-banner"></h2>
-	<div id="qunit-testrunner-toolbar"></div>
-	<h2 id="qunit-userAgent"></h2>
-	<ol id="qunit-tests"></ol>
-	<div id="qunit-fixture">test markup, will be hidden</div>
+    <h1 id="qunit-header">Reactive Extensions for JavaScript: Koans (RxJSKoans)</h1>
+    <h2 id="qunit-banner"></h2>
+    <div id="qunit-testrunner-toolbar"></div>
+    <h2 id="qunit-userAgent"></h2>
+    <ol id="qunit-tests"></ol>
+    <div id="qunit-fixture">test markup, will be hidden</div>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/rxjs/2.2.28/rx.all.js" type="text/javascript"></script>
 </body>
 </html>
